--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
     <a href="{{ url_for('dashboard') }}">Dashboard</a>
     <a href="{{ url_for('create_set') }}">View Your Flashcards Sets</a>
     <a href="{{ url_for('choose_review') }}">Let's Revise!</a>
+    <a href="{{ url_for('choose_review') }}">Progress Checker</a>
     <a href="{{ url_for('logout') }}">Logout</a>
   </nav>
   {% endif %}
