--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <a href="{{ url_for('dashboard') }}">Dashboard</a>
     <a href="{{ url_for('create_set') }}">View Your Flashcards Sets</a>
     <a href="{{ url_for('choose_review') }}">Let's Revise!</a>
-    <a href="{{ url_for('progress.get_progress') }}">Progress</a>
+    <a href="{{ url_for('progress.progress_page') }}">Progress</a>
     <a href="{{ url_for('logout') }}">Logout</a>
   </nav>
   {% endif %}
