--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -16,6 +16,7 @@
         <li><a href="#how-it-works">How It Works</a></li>
         <li><a href="#features">Features</a></li>
         <li><a href="#testimonials">Reviews</a></li>
+        <li><a href="#login">Login</a></li>
         <button id="darkModeToggle">🌙</button>
       </ul>
     </nav>
